--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,3 @@
-h1  {
-    background-color: darkcyan;
-    color: white;
-}
-
 ul {
     list-style-type: none;
     margin: 0;
@@ -14,13 +9,14 @@ li {
     color: grey;
 }
 
-.header h2  {
-    color: darkcyan;
+.header h1  {
+    background-color: darkcyan;
+    color: white;
     margin-left: 2%;
 }
 
 body  {
-    background-color: lightgray;
+    background-color: lightgrey;
 }  
 
 .nav {
@@ -46,10 +42,33 @@ hr  {
     margin-bottom: 5%;
     margin-left: 10%;
     margin-right: 10%;
+    padding-bottom: 2%;
     
+}
+
+h2  {
+    margin-left: 2%;
+    padding-top: 2%;
 }
 
 p   {
     margin-left: 2%;
     margin-right: 2%;
+    font-family: "Arial", Arial, Helvetica, sans-serif;
+    line-height: 1.6;
+
+}
+
+img {
+    float:left;
+    padding: 20px;
+}
+
+footer {
+    background-color:grey;
+    border-top: 4px solid darkcyan;
+}
+
+.copyright {
+    text-align: center;
 }
