modified content to 960px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,9 +12,6 @@ li {
 .header h1  {
     background-color: darkcyan;
     color: white;
-    margin-left: 9%;
-    padding-right: 40px;
-    padding-left: 40px;
 }
 
 body  {
@@ -28,11 +25,14 @@ body  {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 960px;
+    position: center;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .header {
     background-color: white;
-    padding: 0 1em;
     border-bottom: 2px solid grey;
 }
 
@@ -49,6 +49,8 @@ hr  {
     margin-left: 10%;
     margin-right: 10%;
     padding-bottom: 2%;
+    width: 960px;
+    align-items: center;
     
 }
 
@@ -59,6 +61,7 @@ hr  {
     margin-left: 10%;
     margin-right: 10%;
     padding-bottom: 2%;
+    width: 960px;
 }
 
 h2  {
@@ -99,4 +102,13 @@ a {
     font-weight: 600;
     color: lightgrey;
     text-decoration: none;
+}
+
+form {
+    font-family: "Arial", Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    color: grey;
+    margin-left: 2%;
+    margin-right: 2%;
+    line-height: 1.6;
 }
