--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,12 +6,13 @@ ul {
 
 li {
     display: inline;
-    color: grey;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 .header h1  {
-    background-color: darkcyan;
-    color: white;
+    background-color: #4aaaa5;
+    color: #ffffff;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 body  {
@@ -21,7 +22,7 @@ body  {
 }  
 
 .nav {
-    background-color: white;
+    background-color: #ffffff;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -32,18 +33,18 @@ body  {
 }
 
 .header {
-    background-color: white;
-    border-bottom: 2px solid grey;
+    background-color: #ffffff;
+    border-bottom: 2px solid #cccccc;
 }
 
 hr  {
     margin-left: 2%;
     margin-right: 2%;
-    border-top: 1px solid lightgrey;
+    border-top: 1px solid #cccccc;
 }
 
 .about {
-    background-color: white;
+    background-color: #ffffff;
     margin-top: 5%;
     margin-bottom: 5%;
     margin-left: 10%;
@@ -55,7 +56,7 @@ hr  {
 }
 
 .contact-form {
-    background-color: white;
+    background-color: #ffffff;
     margin-top: 5%;
     margin-bottom: 5%;
     margin-left: 10%;
@@ -67,13 +68,14 @@ hr  {
 h2  {
     margin-left: 2%;
     padding-top: 2%;
-    color: darkcyan;
+    color: #4aaaa5;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 p   {
     margin-left: 2%;
     margin-right: 2%;
-    font-family: "Arial", Arial, Helvetica, sans-serif;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-weight: 6500;
     line-height: 1.6;
 
@@ -85,27 +87,27 @@ img {
 }
 
 footer {
-    background-color:grey;
-    border-top: 6px solid darkcyan;
+    background-color:#666666;
+    border-top: 6px solid #4aaaa5;
     height: 50px;
 }
 
 .copyright {
     text-align: center;
-    font-family: "Arial", Arial, Helvetica, sans-serif;
-    color: lightgrey;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #cccccc;
     font-size: .5em;
 }
 
 a {
-    font-family: "Arial", Arial, Helvetica, sans-serif;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-weight: 600;
-    color: lightgrey;
+    color: #cccccc;
     text-decoration: none;
 }
 
 form {
-    font-family: "Arial", Arial, Helvetica, sans-serif;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-weight: 600;
     color: grey;
     margin-left: 2%;
