--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,14 @@ li {
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
+html    {
+    height: 100%;
+    margin: 0;
+}
+
 body  {
     background-color: lightgrey;
+    height: 100%;
     margin: 0;
     padding: 0;
 }  
@@ -65,6 +71,16 @@ hr  {
     width: 960px;
 }
 
+.portfolioList  {
+    background-color: #ffffff;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding-bottom: 2%;
+    width: 960px;
+}
+
 h2  {
     margin-left: 2%;
     padding-top: 2%;
@@ -76,8 +92,9 @@ p   {
     margin-left: 2%;
     margin-right: 2%;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    font-weight: 6500;
+    font-weight: 7000;
     line-height: 1.6;
+    color: #777777;
 
 }
 
@@ -86,9 +103,18 @@ img {
     margin-right: 10px;
 }
 
+.wrapper    {
+    min-height: 100%;
+    margin-bottom: -50px;
+}
+
 footer {
     background-color:#666666;
     border-top: 6px solid #4aaaa5;
+    height: 50px;
+}
+
+.push   {
     height: 50px;
 }
 
