--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ li {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
-.header h1  {
+h1  {
     background-color: #4aaaa5;
     color: #ffffff;
     font-family: 'Georgia', Times, Times New Roman, serif;
@@ -25,6 +25,7 @@ body  {
     height: 100%;
     margin: 0;
     padding: 0;
+    position: relative;
 }  
 
 .nav {
@@ -33,14 +34,17 @@ body  {
     justify-content: space-between;
     align-items: center;
     width: 960px;
-    position: center;
-    margin-left: 10%;
-    margin-right: 10%;
+    position: absolute;
+    left: 25%;
+    right: 25%;
 }
 
-.header {
+header {
     background-color: #ffffff;
     border-bottom: 2px solid #cccccc;
+    position: absolute;
+    right: 0;
+    left: 0;
 }
 
 hr  {
@@ -53,37 +57,37 @@ hr  {
     background-color: #ffffff;
     margin-top: 5%;
     margin-bottom: 5%;
-    margin-left: 10%;
-    margin-right: 10%;
     padding-bottom: 2%;
     width: 960px;
-    align-items: center;
-    
+    position: absolute;
+    left: 25%;
+    right: 25%;
 }
 
 .contact-form {
     background-color: #ffffff;
     margin-top: 5%;
     margin-bottom: 5%;
-    margin-left: 10%;
-    margin-right: 10%;
     padding-bottom: 2%;
     width: 960px;
+    position: absolute;
+    left: 25%;
+    right: 25%;
 }
 
 .portfolioList  {
     background-color: #ffffff;
     margin-top: 5%;
     margin-bottom: 5%;
-    margin-left: 10%;
-    margin-right: 10%;
     padding-bottom: 2%;
     width: 960px;
+    position: absolute;
+    left: 25%;
+    right: 25%;
 }
 
 h2  {
     margin-left: 2%;
-    padding-top: 2%;
     color: #4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
