--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ li {
 h1  {
     background-color: #4aaaa5;
     color: #ffffff;
-    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-family: 'Georgia', 'Times', 'Times New Roman' , serif;
     padding: 20px;
 }
 
@@ -45,9 +45,8 @@ body  {
 header {
     background-color: #ffffff;
     border-bottom: 2px solid #cccccc;
-    position: absolute;
-    right: 0;
-    left: 0;
+    max-height: 75px;
+    height: 75px;
 }
 
 hr  {
@@ -56,32 +55,9 @@ hr  {
     border-top: 1px solid #cccccc;
 }
 
-.about {
+.about, .contact-form, .portfolioList {
     background-color: #ffffff;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    padding-bottom: 2%;
-    width: 960px;
-    position: absolute;
-    left: 25%;
-    right: 25%;
-}
-
-.contact-form {
-    background-color: #ffffff;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    padding-bottom: 2%;
-    width: 960px;
-    position: absolute;
-    left: 25%;
-    right: 25%;
-}
-
-.portfolioList  {
-    background-color: #ffffff;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    margin-top: 2%;
     padding-bottom: 2%;
     width: 960px;
     position: absolute;
@@ -92,7 +68,7 @@ hr  {
 h2  {
     margin-left: 2%;
     color: #4aaaa5;
-    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
 }
 
 p   {
@@ -119,6 +95,7 @@ footer {
     background-color:#666666;
     border-top: 6px solid #4aaaa5;
     height: 50px;
+    position: relative;
 }
 
 .push   {
@@ -126,10 +103,16 @@ footer {
 }
 
 .copyright {
-    text-align: center;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #cccccc;
     font-size: .5em;
+    position: absolute;
+    bottom: 2px;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
 }
 
 a {
