--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,3 +137,23 @@ form {
 .contactInfo {
     width: 100%;
 }
+
+.container  {
+    position: relative;
+    margin-left: 2%;
+    margin-top: 2%;
+}
+
+.text-block  {
+    position: absolute;
+    color: #ffffff;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    width: 200px;
+    top: 100px;
+}
+
+h4{
+    background-color: #4aaaa5;
+    padding: 10px;
+    text-align: center;
+}
