--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,6 @@ body  {
     width:  100%;
     margin: 0;
     padding: 0;
-    position: relative;
 }  
 
 .nav {
@@ -40,9 +39,10 @@ body  {
     justify-content: space-between;
     align-items: center;
     width: 960px;
-    position: absolute;
+    /*position: absolute;
     left: 15%;
-    right: 15%;
+    right: 15%;*/
+    margin: 0 auto;
     max-height: 75px;
     overflow: hidden;
 }
@@ -65,9 +65,7 @@ hr  {
     margin-top: 2%;
     padding-bottom: 2%;
     width: 960px;
-    position: absolute;
-    left: 15%;
-    right: 15%;
+    margin: 0 auto;
 }
 
 h2  {
@@ -100,7 +98,6 @@ footer {
     background-color:#666666;
     border-top: 6px solid #4aaaa5;
     height: 50px;
-    position: relative;
 }
 
 .push   {
@@ -111,12 +108,8 @@ footer {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #cccccc;
     font-size: .5em;
-    position: absolute;
     bottom: 2px;
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     width: 100px;
 }
 
