--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@ hr  {
 
 .about, .contact-form, .portfolioList {
     background-color: #ffffff;
-    margin-top: 2%;
+    padding-top: 5%;
     padding-bottom: 2%;
     width: 960px;
     margin: 0 auto;
