--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ li {
     display: inline;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     padding: 10px;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 100;
 }
 
@@ -49,6 +49,10 @@ body  {
     overflow: hidden;
 }
 
+.nav a:first-child  {
+    border-left: 0 none;
+}
+
 header {
     background-color: #ffffff;
     border-bottom: 2px solid #cccccc;
@@ -84,7 +88,8 @@ p   {
     margin-right: 2%;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-weight: 7000;
-    line-height: 1.6;
+    line-height: 1.5;
+    font-size: 16px;
     color: #777777;
 
 }
@@ -124,6 +129,7 @@ a {
     font-weight: 600;
     color: #cccccc;
     text-decoration: none;
+    border-left: 1px solid #cccccc;
 }
 
 form {
@@ -132,7 +138,7 @@ form {
     color: grey;
     margin-left: 2%;
     margin-right: 2%;
-    line-height: 1.6;
+    line-height: 1.5;
 }
 
 .contactInfo {
@@ -150,6 +156,7 @@ form {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     width: 200px;
     top: 100px;
+    font-size: 16px;
 }
 
 h4{
@@ -188,6 +195,7 @@ table   {
     text-decoration: none;
     cursor: pointer;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 16px;
     padding: 5px 20px 5px 20px;
 }
 
